<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="16dp">

        <ImageView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="@id/cost_of_service"
             android:importantForAccessibility="no"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
             app:srcCompat="@drawable/ic_store"
             android:id="@+id/icon_cost_of_service" />

        <com.google.android.material.textfield.TextInputLayout
             android:layout_height="wrap_content"
             android:layout_width="160dp"
             android:hint="@string/cost_of_service"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
             android:layout_marginStart="16dp"
             android:id="@+id/cost_of_service">

            <com.google.android.material.textfield.TextInputEditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:inputType="numberDecimal"
                 android:id="@+id/cost_of_service_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="@id/service_question"
             android:importantForAccessibility="no"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/service_question"
             app:srcCompat="@drawable/ic_service"
             android:id="@+id/icon_service_question" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintStart_toStartOf="@id/cost_of_service"
             style="@style/Widget.TipCalculator.TextView"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/cost_of_service"
             android:id="@+id/service_question"
             android:text="@string/how_was_the_service" />

        <RadioGroup
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:checkedButton="@id/option_twenty_percent"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="@id/service_question"
             app:layout_constraintTop_toBottomOf="@id/service_question"
             android:id="@+id/tip_options">

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:id="@+id/option_twenty_percent"
                 android:text="@string/amazing_service" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:id="@+id/option_eighteen_percent"
                 android:text="@string/good_service" />

            <RadioButton
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:id="@+id/option_fifteen_percent"
                 android:text="@string/ok_service" />

        </RadioGroup>

        <ImageView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="@id/round_up_switch"
             android:importantForAccessibility="no"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
             app:srcCompat="@drawable/ic_round_up"
             android:id="@+id/icon_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             app:layout_constraintStart_toStartOf="@id/tip_options"
             app:layout_constraintEnd_toEndOf="parent"
             android:checked="true"
             app:layout_constraintTop_toBottomOf="@id/tip_options"
             android:id="@+id/round_up_switch"
             android:text="@string/round_tip" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             app:layout_constraintStart_toStartOf="@id/round_up_switch"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/round_up_switch"
             android:id="@+id/calculate_button"
             android:text="@string/calculate" />

        <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             style="@style/Widget.TipCalculator.TextView"
             android:layout_marginTop="8dp"
             tools:text="Tip Amount: $10"
             app:layout_constraintTop_toBottomOf="@id/calculate_button"
             android:id="@+id/tip_result" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>